<resources>
    <string name="app_name">MAD!</string>
    <string name="profilText">Profil</string>
    <string name="testeText">Teste</string>
    <string name="rapoarteText">Rapoarte</string>
    <string name="feedbackTextTeste">Feedback</string>
    <string name="csharpText">Categoria: C#</string>
    <string name="categ1_SeeAll">Vezi teste</string>
    <string name="javaText">Categoria: JAVA</string>
    <string name="javascriptText">Categoria: JAVASCRIPT</string>
    <string name="htmlCssText"><![CDATA[Categoria: HTML&CSS]]></string>
    <string name="cCppText"><![CDATA[Categoria: C&C++]]></string>
    <string name="creeazaTest">Creeaza</string>
    <string name="modificaTV">Modifica</string>
    <string name="testeleMeleTv">Testele mele</string>
    <string name="stergeTV">Sterge</string>
    <string name="hintListaTeste">Selectati testul pe care doriti sa-l modificati/stergeti</string>
    <string name="grupaCText">Grupa C</string>
    <string name="seriaCText">Seria C</string>
    <string name="seriaDText">Seria D</string>
    <string name="seriaEText">Seria E</string>
    <string name="numePrenumeTR">Nume Prenume:</string>
    <string name="cnpTR">CNP:</string>
    <string name="grupaSerieTR">Seria Grupa:</string>
    <string name="testNoteTR">Test Nota:</string>
    <string name="rapStudentiText">Raport Situatie Studenti</string>
    <string name="rapGrupeText">Raport Situatie Grupe</string>
    <string name="rapTesteString">Raport Situatie Teste</string>
    <string name="rapCategTesteText">Raport Situatie Categorii Teste</string>
    <string name="userTv">User:</string>
    <string name="nameText">Nume</string>
    <string name="parolaText">Parola</string>
    <string name="loginText">Login</string>
    <string name="registerTextLogare">Register</string>
    <string name="recuperareParolaTxtL">Recuperare parola</string>
    <string name="tipText">Tip</string>
    <string name="facultateText">Facultate</string>
    <string name="emailString">E-mail</string>
    <string name="numePrenumeString">Nume si prenume</string>
    <string name="recuperareText">Recuperare!</string>
    <string-array name="genTest_listaTeste">
        <item>Test1</item>
        <item>Test2</item>
        <item>Test3</item>
        <item>Test4</item>
    </string-array>
    <string name="codString">Introduceti codul testului:</string>
    <string name="codHint">ex: 1234</string>
    <string name="ImgBrain" />
    <string name="title_activity_main2">Main2Activity</string>
    <string name="outputIntrebareString">Ce limbaje de programare stiti?</string>
    <string name="raspuns1">C#, Java, JavaScript, C/C++</string>
    <string name="raspuns2">Java</string>
    <string name="raspuns3">Javascript</string>
    <string name="raspuns4">C/C++</string>
    <string name="btnTestInregistreaza">Inregistreaza raspunsul</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_punctaj">PunctajActivity</string>
    <string name="punctajTxt">Punctaj:</string>
    <string name="notaString">Ati obtinut nota</string>
    <string name="nNota">8</string>
    <string name="title_activity_8">Activity8</string>
    <string name="intrebareString">Intrebarea:</string>
    <string name="intrebareStringEdit">ex: Ce limbaje de programare stiti?</string>
    <string name="intrebareHint">Intrebarea pe care doriti sa o scrieti.</string>
    <string name="raspunsuri">Variante de raspuns</string>
    <string name="corect">Raspuns corect</string>
    <string name="intrGresiteString">Numarul de intrebari gresite este:</string>
    <string name="nrIntr">2</string>
    <string name="raspunsCreare">C#, Java, JavaScript, C/C++</string>
    <string name="raspuns1Creare">C#</string>
    <string name="raspuns2Creare">Java</string>
    <string name="adaugaRaspunsuri">Adauga Raspunsuri</string>
    <string name="stergeRaspunsuri">Sterge Raspunsuri</string>
    <string name="raspunsHint">O varianta de raspuns.</string>
    <string name="activeazaTimpul">Activeaza timpul de raspuns:</string>
    <string name="salveazaTxtCreare">Saveaza</string>
    <string name="editareBtnTxt">Editare Raspuns</string>
    <string name="salveazaTxt">Salveaza</string>
    <string name="parolaET">Parola</string>
    <string name="userHint">User</string>
    <string name="emailHint">E-mail</string>
    <string name="usernameHint">Username</string>
    <string name="parolaHint">ex: 123</string>
    <string name="registerText">Register</string>
    <string name="feedbackText">Feedback</string>
    <string name="intordAdresa">Introduceti adresa de e-mail:</string>
    <string name="emailHintR">e-mail</string>
    <string name="trimiteFeedBString">Trimite feedback</string>
    <string name="notaString1">10</string>
    <string name="checkBMentine">Mentine-ma logat</string>
    <string name="gestionareString">Gestionarea testelor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aparutIn_frTV">Aparut in:</string>
    <string name="dezvDe_fragText">Dezvoltat de:</string>
    <string name="fragment_selectareText">Alegeti categoria pe care doriti sa o vizualizati</string>
    <string name="profilNumeString">Profilul tau</string>
    <string name="angajatAlFacultatii">Angajat al facultatii:</string>
    <string name="editareProfilString">Editare</string>
</resources>
