<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogareActivity">

    <include layout="@layout/toolbar_activitati"></include>

    <TextView
        android:id="@+id/parolaTV"
        android:layout_width="114dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/parolaText"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/userTV"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/userTV"
        app:layout_constraintTop_toBottomOf="@+id/userTV"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/userTV"
        android:layout_width="114dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/userTv"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <EditText
        android:id="@+id/userEditL"
        android:layout_width="171dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="casual"
        android:gravity="center"
        android:hint="@string/nameText"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/userTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/userTV"
        app:layout_constraintTop_toTopOf="@+id/userTV"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/parolaEdit"
        android:layout_width="171dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="casual"
        android:gravity="center"
        android:hint="@string/parolaET"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/parolaTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/parolaTV"
        app:layout_constraintTop_toTopOf="@+id/parolaTV"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/logareBtn"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:text="@string/loginText"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parolaTV"
        app:layout_constraintVertical_bias="0.14" />

    <Button
        android:id="@+id/btnRegister"
        style="@android:style/Widget.DeviceDefault.Light.Button.Inset"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:text="@string/registerTextLogare"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toEndOf="@+id/logareBtn"
        app:layout_constraintTop_toBottomOf="@+id/parolaEdit"
        app:layout_constraintVertical_bias="0.14" />

    <Button
        android:id="@+id/recuperareParolaBtn"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="119dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"

        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/recuperareParolaTxtL"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logareBtn"
        app:layout_constraintVertical_bias="0.093" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="184dp"
        android:layout_height="190dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintVertical_bias="0.49"
        app:srcCompat="@drawable/loginom" />

    <CheckBox
        android:id="@+id/checkBoxLogare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="8dp"
        android:checked="true"
        android:fontFamily="casual"
        android:text="@string/checkBMentine"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parolaTV"
        android:onClick="getPreferinte"/>

</android.support.constraint.ConstraintLayout>