<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".RezultatTestActivity"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <include layout="@layout/toolbar_activitati"></include>

    <LinearLayout
        android:id="@+id/linearL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="20dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/notaTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/notaString"
            android:textSize="18sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/notaTxtV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/nNota"
            android:textSize="18sp"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearL2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/punctajTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="302dp"
                android:fontFamily="casual"
                android:paddingTop="15dp"
                android:text="@string/punctajTxt"
                android:textSize="15sp" />

            <RatingBar
                android:id="@+id/ratingBarTest"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="49dp"
                android:numStars="10"
                android:rating="8" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearL3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/intrebariGresiteTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:text="@string/intrGresiteString"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/nrIntrGTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/nrIntr"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="285dp"
                android:layout_height="284dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="88dp"
                android:layout_marginTop="74dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="21dp"
                android:src="@drawable/punctuationmarks" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>